# WattSeal

./: Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: build.yml  log_downloads.yml  release.yml  rust.yml
collector/: Cargo.toml
collector/src/: lib.rs  main.rs
collector/src/database/: mod.rs  process.rs  tables.rs
collector/src/sensors/: disk.rs  gpu.rs  mod.rs  network.rs  processes.rs  ram.rs
collector/src/sensors/cpu/: estimation.rs  linux_cpu.rs  mod.rs
collector/src/sensors/cpu/windows_cpu/: driver.rs  mod.rs
collector/src/sensors/tcp_connections/: linux_tcp_connections.rs  mac_tcp_connections.rs  mod.rs  windows_tcp_connections.rs
common/src/: lib.rs  logging.rs  types.rs  utils.rs
common/src/database/: entries.rs  migration.rs  mod.rs  purge.rs  types.rs
doc/: sensor_sources.md
mqtt/: Cargo.toml
mqtt/src/: lib.rs  topics.rs
resources/linux/: WattSeal.desktop
src/: main.rs
ui/src/: app.rs  main.rs  message.rs  translations.rs  types.rs
ui/src/components/: footer.rs  sensor_state.rs
ui/src/pages/: dashboard.rs  info.rs
