[package]
name = "wattseal"
autobins = false
build = "build.rs"
version.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
edition.workspace = true
description.workspace = true

[[bin]]
name = "WattSeal"
path = "src/main.rs"

[workspace]
resolver = "3"
members = ["collector", "common", "mqtt"]

[workspace.package]
version = "1.0.2"
authors = ["Damien PHILIPPE <damien.philippe@edu.esiee.fr>", "Paul MALLARD <paul.mallard@edu.esiee.fr>"]
readme = "README.md"
license = "GPL-3.0"
homepage = "https://wattseal.com"
repository = "https://github.com/Daminoup88/WattSeal"
keywords = ["power", "energy", "monitoring", "carbon", "emissions", "sustainability"]
edition = "2024"
description = "WattSeal is a tool to monitor and analyze the power consumption of your computer, providing insights into energy usage and carbon emissions."

[dependencies]
collector = { path = "collector" }
common = { path = "common" }
bpaf = { version = "0.9.26", features = ["derive", "dull-color"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "unwind"
