[package]
name = "colhidor"
autobins = false
build = "build.rs"
version.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
edition.workspace = true
description.workspace = true

[[bin]]
name = "Colhidor"
path = "src/main.rs"

[workspace]
resolver = "3"
members = ["collector", "common", "mqtt"]

[workspace.package]
version = "1.0.2"
authors = ["Gabin DUDILLIEU <gabin.dudillieu@liant.dev>", "Paul MALLARD <roland@liant.dev>"]
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/Liant-SASU/Colhidor"
keywords = ["power", "energy", "monitoring", "carbon", "emissions", "sustainability"]
edition = "2024"
description = "Colhidor is a tool for collecting consumption data and sending it over the MQTT protocol."

[dependencies]
collector = { path = "collector" }
common = { path = "common" }
bpaf = { version = "0.9.26", features = ["derive", "dull-color"] }
tokio = "1.52.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
tokio = "1.52.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "unwind"
