[package]
name = "collector"
version.workspace = true
edition = "2024"

[target.'cfg(windows)'.dependencies]
scaphandre-driver-rs = "1.0.0"
adlx = "0.0.0-alpha.1"
runas = "1.2"
windows = { version = "0.62.2", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[target.'cfg(any(windows, target_os = "linux"))'.dependencies]
nvml-wrapper = "0.12.1"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
nix = { version = "0.27", features = ["socket", "net"] }
sysctl = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18.0"

[dependencies]
common = { path = "../common" }
mqtt = { path = "../mqtt" }
display-info = "0.5.9"
sysinfo = "0.39.3"
battery = "0.7.8"
rumqttc = "0.25.1"
blake3 = "1.8.5"
hostname = "0.4.2"
tokio = "1.52.3"
