[package]
name = "mqtt"
version.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
common = { path = "../common" }
mockall = "0.14.0"
rumqttc = "0.25.1"
serde = "1.0.228"
serde_json = "1.0.149"
